RESOLVED FIXED189002
REGRESSION(r234985/r234989) WKPageLoadHTMLString with a 16-bit String has the wrong encoding
https://bugs.webkit.org/show_bug.cgi?id=189002
Summary REGRESSION(r234985/r234989) WKPageLoadHTMLString with a 16-bit String has the...
Alex Christensen
Reported 2018-08-27 13:54:45 PDT
REGRESSION(r234985/r234989) WKPageLoadHTMLString with a 16-bit String has the wrong encoding
Attachments
Patch (2.91 KB, patch)
2018-08-27 13:56 PDT, Alex Christensen
thorton: review+
Alex Christensen
Comment 1 2018-08-27 13:56:09 PDT
Alex Christensen
Comment 2 2018-08-27 13:58:20 PDT
Radar WebKit Bug Importer
Comment 3 2018-08-27 13:59:21 PDT
Note You need to log in before you can comment on or make changes to this bug.