REGRESSION(r234985/r234989) WKPageLoadHTMLString with a 16-bit String has the wrong encoding https://bugs.webkit.org/show_bug.cgi?id=189002

Reviewed by Tim Horton.

Source/WebKit:

* UIProcess/API/C/WKPage.cpp:
(encodingOf):

Tools:

* TestWebKitAPI/Tests/WebKit/WillLoad.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/204051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235397 268f45cc-cd09-0410-ab3c-d52691b4dbfc